debugging dry regrade

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,8 @@ services:
       - "5556:5555"
     environment:
       DATABASE_URL: ${LABCREATOR_DATABASE_URL}
+      PORTAL_DATABASE_URL: ${PORTAL_DATABASE_URL}
+      PORTAL_API_URL: ${PORTAL_API_URL}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
       NODE_ENV: ${NODE_ENV}
