--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   redis:
@@ -12,7 +11,7 @@ services:
 
   portal-api:
     restart: unless-stopped
-    command: nodemon app.js
+    command: npx nodemon app.js
     environment:
       NODE_ENV: development
 
