--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ networks:
 services:
   redis:
     image: redis:7
+    container_name: redis
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     ports:
       - "16379:6379"          # expose to host if needed
@@ -12,7 +13,7 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     networks:
       - edu-platform-network
-    restart: no
+    restart: unless-stopped
   portal-db:
     image: postgres:16
     container_name: portal-db
@@ -26,7 +27,7 @@ services:
       - pgdata-portal:/var/lib/postgresql/data
     networks:
       - edu-platform-network
-    restart: unless-stopped
+    restart: no
   lab-creator-db:
     image: postgres:16
     container_name: lab-creator-db
